--- a/inch.cabal
+++ b/inch.cabal
@@ -44,6 +44,7 @@ library
     , bytestring
     , formatting
     , megaparsec
+    , parser-combinators
     , process
     , text
   default-language: Haskell2010
@@ -63,6 +64,7 @@ executable inch-exe
     , formatting
     , inch
     , megaparsec
+    , parser-combinators
     , process
     , text
   default-language: Haskell2010
@@ -91,6 +93,7 @@ test-suite inch-test
     , hspec-contrib
     , inch
     , megaparsec
+    , parser-combinators
     , process
     , temporary
     , text
