--- a/inch.cabal
+++ b/inch.cabal
@@ -43,9 +43,11 @@ library
     , bytestring
     , formatting
     , megaparsec
+    , mtl
     , parser-combinators
     , process
     , text
+    , unordered-containers
   default-language: Haskell2010
 
 executable inch-exe
@@ -63,9 +65,11 @@ executable inch-exe
     , formatting
     , inch
     , megaparsec
+    , mtl
     , parser-combinators
     , process
     , text
+    , unordered-containers
   default-language: Haskell2010
 
 test-suite inch-test
@@ -92,8 +96,10 @@ test-suite inch-test
     , hspec-contrib
     , inch
     , megaparsec
+    , mtl
     , parser-combinators
     , process
     , temporary
     , text
+    , unordered-containers
   default-language: Haskell2010
