--- a/inch.cabal
+++ b/inch.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.35.0.
+-- This file has been generated from package.yaml by hpack version 0.36.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -78,6 +78,7 @@ test-suite inch-test
   main-is: Spec.hs
   other-modules:
       Eval.ConstantSpec
+      Eval.IfSpec
       Eval.PrimCall.UnarySpec
       Eval.Util
       MainSpec
