--- a/inch.cabal
+++ b/inch.cabal
@@ -79,6 +79,7 @@ test-suite inch-test
   other-modules:
       Eval.ConstantSpec
       Eval.IfSpec
+      Eval.PrimCall.BinarySpec
       Eval.PrimCall.UnarySpec
       Eval.Util
       MainSpec
