--- a/inch.cabal
+++ b/inch.cabal
@@ -80,6 +80,7 @@ test-suite inch-test
   other-modules:
       Eval.ConstantSpec
       Eval.IfSpec
+      Eval.LetrecSpec
       Eval.LetSpec
       Eval.PrimCall.BinarySpec
       Eval.PrimCall.UnarySpec
